tests/baselines/reference/asyncEnum_es5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
asyncEnum_es5.ts(1,1): error TS1042: 'async' modifier cannot be used here.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== asyncEnum_es5.ts (1 errors) ====
    async enum E {
    ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
      Value
    }